--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="350dp"
                 android:fitsSystemWindows="true"
-                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 app:contentScrim="?attr/colorPrimary"
                 app:expandedTitleTextAppearance="@android:color/transparent"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
@@ -52,13 +51,14 @@
                             android:layout_height="wrap_content"
                             android:gravity="center_horizontal"
                             android:background="#8d333333"
-                            android:text="City t"
+                            android:text="@string/city"
                             android:textColor="@android:color/white"
                             android:textSize="30sp"
                             />
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:background="#8d333333"
                             android:orientation="horizontal">
 
                             <TextView
@@ -66,9 +66,9 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="5"
-                                android:background="#8d333333"
-                                android:gravity="center_horizontal"
-                                android:text="Wind speed, \nhumidity"
+                                android:layout_marginStart="8dp"
+                                android:gravity="start"
+                                android:text="@string/wind_speed_nhumidity"
                                 android:textColor="@android:color/white"
                                 android:textSize="15sp"
                                 />
@@ -77,13 +77,13 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:layout_weight="5"
-                                android:background="#8d333333"
-                                android:src="@drawable/ic_wb_sunny_black_24dp"/>
+                                app:srcCompat="@drawable/ic_wb_sunny_black_24dp"/>
                         </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:background="#8d333333"
                             android:orientation="horizontal"
                             >
 
@@ -92,9 +92,9 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="5"
-                                android:background="#8d333333"
-                                android:gravity="center_horizontal"
-                                android:text="Pressure"
+                                android:gravity="start"
+                                android:layout_marginStart="8dp"
+                                android:text="@string/presssure"
                                 android:textColor="@android:color/white"
                                 android:textSize="15sp"
                                 />
@@ -104,7 +104,6 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="5"
-                                android:background="#8d333333"
                                 android:gravity="center_horizontal"
                                 android:text="Sunrise,sunset"
                                 android:textColor="@android:color/white"
@@ -120,6 +119,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     app:layout_collapseMode="pin"
+
+                    app:showAsAction="ifRoom|collapseActionView"
+                    app:actionViewClass="android.support.v7.widget.SearchView"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
             </android.support.design.widget.CollapsingToolbarLayout>
         </android.support.design.widget.AppBarLayout>
