--- a/app/src/main/res/layout/source_card_layout.xml
+++ b/app/src/main/res/layout/source_card_layout.xml
@@ -8,36 +8,33 @@
     app:cardElevation="8dp"
     >
     <LinearLayout
-
-        android:orientation="horizontal"
-        android:layout_gravity="center"
-        android:weightSum="10"
-        android:background="@android:color/white"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@android:color/white"
+        android:orientation="horizontal"
+        android:weightSum="10">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/source_image"
-            android:layout_weight="2"
-            android:scaleType="centerCrop"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-
+            android:layout_weight="2"
+            android:scaleType="centerCrop"
+            android:src="@drawable/news"
             />
         <TextView
             android:id="@+id/source_name"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft= "10dp"
-            android:layout_weight="8"
-            android:textStyle="bold"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="10dp"
+            android:layout_weight="8"
             android:textSize="24sp"
+            android:textStyle="bold"
             >
-
         </TextView>
-
     </LinearLayout>
 
 
