--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#000000</color>
 
     <color name="black_overlay">#66000000</color>
+    <color name="gray_overlay">#a6000000</color>
 </resources>
