--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,10 +3,11 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#a6000000</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/gray_overlay</item>
+        <item name="colorPrimaryDark">@color/gray_overlay</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
@@ -29,14 +30,17 @@
         <item name="android:windowFullscreen">true</item>
 
     </style>
+
     <style name="FullScreenActionBarStyle" parent="Widget.AppCompat.ActionBar">
         <item name="android:background">@color/black_overlay</item>
     </style>
+
     <style name="CollapsedAppBar" parent="@android:style/TextAppearance.Medium">
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textStyle">normal</item>
     </style>
+
     <style name="ExpandedAppBar" parent="@android:style/TextAppearance.Material.Title" tools:targetApi="lollipop">
         <item name="android:textSize">24sp</item>
         <item name="android:gravity">center</item>
