--- a/app/src/main/res/layout/activity_list_news.xml
+++ b/app/src/main/res/layout/activity_list_news.xml
@@ -6,7 +6,7 @@
     android:id="@+id/relative_list_news"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.dima.news.ListNews">
+    tools:context="com.example.dima.news.DetailArticle$ListNewsActivity">
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -98,7 +98,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:context="com.example.dima.news.ListNews">
+            tools:context="com.example.dima.news.DetailArticle$ListNewsActivity">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/lst_news"
