--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    tools:context="com.example.dima.news.MainActivity"
+    tools:context="com.example.dima.news.ui.MainActivity"
     >
 
     <android.support.design.widget.CoordinatorLayout
@@ -140,7 +140,8 @@
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                >
             </android.support.design.widget.TabLayout>
 
             <android.support.v4.view.ViewPager
@@ -150,6 +151,7 @@
                 android:layout_below="@+id/tabLayout"
                 >
             </android.support.v4.view.ViewPager>
+
         </RelativeLayout>
 
     </android.support.design.widget.CoordinatorLayout>
