--- a/app/src/main/res/layout/fragment_source.xml
+++ b/app/src/main/res/layout/fragment_source.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="com.example.dima.news.MainActivity"
+        tools:context="com.example.dima.news.ui.MainActivity"
         >
 
         <android.support.v7.widget.RecyclerView
