--- a/app/src/main/res/layout/news_layout.xml
+++ b/app/src/main/res/layout/news_layout.xml
@@ -29,14 +29,14 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_gravity="center"
+            android:gravity="center"
             android:layout_margin="8dp"
             android:layout_weight="8"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/article_title"
-                android:layout_gravity="end"
+                android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"/>
@@ -45,6 +45,7 @@
                 android:id="@+id/article_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="start"
                 android:textSize="14sp"
                 android:textStyle="italic"/>
 
