--- a/app/src/main/res/layout/news_layout.xml
+++ b/app/src/main/res/layout/news_layout.xml
@@ -14,16 +14,15 @@
         android:weightSum="10"
         android:background="@android:color/white"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/article_image"
             android:layout_weight="2"
-            android:scaleType="centerCrop"
+            android:gravity="center"
             android:layout_marginStart="8dp"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-
+            android:layout_height="match_parent"
             />
 
         <LinearLayout
