Add graph for weather forecast

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,6 +81,7 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="5"
                                 app:srcCompat="@drawable/ic_wb_sunny_white_24dp"/>
+
                         </LinearLayout>
 
                         <LinearLayout
@@ -110,10 +111,9 @@
                                 android:gravity="center_horizontal"
                                 android:text="Sunrise,sunset"
                                 android:textColor="@android:color/white"
-                                android:textSize="15sp"
-                                />
-
+                                android:textSize="15sp"/>
                         </LinearLayout>
+
                     </LinearLayout>
                 </RelativeLayout>
 
@@ -153,6 +153,5 @@
             </android.support.v4.view.ViewPager>
 
         </RelativeLayout>
-
     </android.support.design.widget.CoordinatorLayout>
 </RelativeLayout>
