--- a/app/src/main/res/layout/weather_forecast.xml
+++ b/app/src/main/res/layout/weather_forecast.xml
@@ -1,126 +1,32 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingBottom="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="16dp">
 
-
-    <LinearLayout
+    <lecho.lib.hellocharts.view.LineChartView
+        android:id="@+id/chart_top"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
-        android:orientation="vertical">
+        android:layout_height="0dp"
+        android:layout_weight="1">
+    </lecho.lib.hellocharts.view.LineChartView>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="@color/colorPrimary">
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@android:color/darker_gray"/>
 
-            <ImageView
-                android:id="@+id/close_toggle_button"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="2dp"
-                android:background="#ffffff"
-                android:textColor="#000000"
-                app:srcCompat="@drawable/ic_swap_vert_black_24dp"/>
-        </RelativeLayout>
+    <lecho.lib.hellocharts.view.ColumnChartView
+        android:id="@+id/chart_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+    </lecho.lib.hellocharts.view.ColumnChartView>
 
-        <com.github.aakira.expandablelayout.ExpandableWeightLayout
-            android:id="@+id/expandableLayout"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="5"
-            android:background="@color/colorPrimaryDark"
-            android:padding="8dp"
-            app:ael_duration="1000"
-            app:ael_expanded="false"
-            app:ael_interpolator="anticipateOvershoot">
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/weather_recyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:theme="@style/ThemeOverlay.AppCompat.Light"/>
-
-        </com.github.aakira.expandablelayout.ExpandableWeightLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="@color/colorAccent">
-
-            <Button
-                android:id="@+id/weather_forecast_on_four_days"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginEnd="8dp"
-                android:background="#000000"
-                android:text="@string/weather_forecast_on_4_days"
-                android:textColor="#FFF"/>
-
-        </RelativeLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:orientation="horizontal"
-            >
-
-            <Button
-                android:id="@+id/todayButton"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginEnd="8dp"
-                android:text="@string/today"
-                android:layout_weight="1"
-                android:background="#000000"
-                android:textColor="#FFF"/>
-
-            <Button
-                android:id="@+id/tomorrow_button"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginRight="8dp"
-                android:layout_weight="1"
-                android:background="#000000"
-                android:textColor="#FFF"/>
-
-            <Button
-                android:id="@+id/after_tomorrow_button"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginEnd="8dp"
-                android:layout_weight="1"
-                android:background="#000000"
-                android:textColor="#FFF"/>
-
-            <Button
-                android:id="@+id/aafter_three_days_button"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_weight="1"
-                android:background="#000000"
-                android:textColor="#FFF"/>
-        </LinearLayout>
-    </LinearLayout>
 </LinearLayout>
