--- a/app/src/main/res/layout/weather_forecast_card_layout.xml
+++ b/app/src/main/res/layout/weather_forecast_card_layout.xml
@@ -5,8 +5,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_width="120dp"
+    android:layout_height="wrap_content"
     android:layout_margin="8dp"
     app:cardElevation="8dp"
     tools:style="@style/CardView"
@@ -22,58 +22,43 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+
             android:text="12h"
             android:textSize="15sp"
-            app:layout_constraintStart_toEndOf="@+id/weather_forecast_image"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
-            android:id="@+id/weather_forecast_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:text="2018.04.04"
-            android:textSize="15sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            />
-
-        <TextView
-            android:id="@+id/weather_forecast_wind_speed"
+            android:id="@+id/humidity"
             android:layout_width="wrap_content"
             android:layout_height="18dp"
             android:layout_marginBottom="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/wind_speed_humidity"
+            android:text="@string/humidity"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/weather_forecast_t"/>
+            app:layout_constraintTop_toBottomOf="@+id/weather_forecast_image"/>
 
         <TextView
             android:id="@+id/weather_forecast_t"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="12dp"
             android:text="20"
             android:textSize="35sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="@+id/weather_forecast_image"
+            app:layout_constraintStart_toEndOf="@+id/weather_forecast_image"
+            app:layout_constraintTop_toTopOf="@+id/weather_forecast_image"/>
 
 
         <ImageView
             android:id="@+id/weather_forecast_image"
             android:layout_width="50dp"
             android:layout_height="50dp"
-
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintStart_toEndOf="@+id/weather_forecast_t"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="4dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/weather_forecast_time"
             app:srcCompat="@drawable/ic_wb_sunny_white_24dp"/>
     </android.support.constraint.ConstraintLayout>
-
 </android.support.v7.widget.CardView>
