Add a description of news

--- a/app/src/main/res/layout/source_card_layout.xml
+++ b/app/src/main/res/layout/source_card_layout.xml
@@ -26,6 +26,7 @@
             />
         <TextView
             android:id="@+id/source_name"
+            android:text="Sample"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
