--- a/app/src/main/res/layout/news_layout.xml
+++ b/app/src/main/res/layout/news_layout.xml
@@ -35,10 +35,17 @@
 
             <TextView
                 android:id="@+id/article_title"
+                android:text="Sample"
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"/>
+                android:textSize="15sp"/>
+            <TextView
+                android:id="@+id/article_description"
+                android:layout_gravity="start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="10sp"/>
 
             <com.github.curioustechizen.ago.RelativeTimeTextView
                 android:id="@+id/article_time"
